<resources>
    <string name="app_name">iMoto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="title_activity_favourite_places_maps">Have to find out</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="navigate">Navigate</string>
    <string name="find_parking">Find Parking</string>
    <string name="check_weather">Check Weather</string>
    <string name="my_profile">My Profile</string>
    <string name="profile_picture">TODO</string>
    <string name="Favourite_places">TextView</string>
    <string name="log_out">Log out</string>
    <string name="settings">Settings</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="slideshow">Slideshow</string>
    <string name="gallery">Gallery</string>
    <string name="friends">Friends</string>
    <string name="camera">Camera</string>
    <string name="help">Help</string>
    <string name="profile">profile</string>
    <string name="name">Name</string>
    <string name="mail">Mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="button">Button</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="not_registered_register_here">Not Registered? Register Here</string>
    <string name="todo">TODO</string>
    <string name="parking">Parking</string>
    <string name="type_here">Type here</string>


    <string name="hello_blank_fragment">Today Weather Demo</string>
    <string name="title_activity_nearby_places_maps">Map</string>
    <string name="search_button">Search</string>
    <string name="hospital">Hospital</string>
    <string name="restaurant">Restaurant</string>
    <string name="fuel">Fuel</string>
    <string name="title_activity_navigation_maps">Map</string>
    <string name="distance">0 km</string>
    <string name="find">Find</string>
    <string name="duration">0 min</string>
    <string name="find_destination">Find path</string>
    <string name="enter_destination">Enter destination</string>
    <string name="search">Search</string>

</resources>
