<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="587dp"
        android:layout_alignParentTop="true"

        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        tools:context=".NearbyPlacesMapsActivity" />

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="94dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/map"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/b_hospital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reg_btn_style"
            android:onClick="onClick"
            android:text="@string/hospital"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/b_parking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reg_btn_style"
            android:onClick="onClick"
            android:text="@string/parking"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/b_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reg_btn_style"
            android:onClick="onClick"
            android:text="@string/restaurant"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/b_fuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/reg_btn_style"
            android:onClick="onClick"
            android:text="@string/fuel"
            android:textColor="#ffffff" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>


